# agentrace

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
agentrace/: checks.py  cli.py  parse.py
tests/: test_agentrace.py
tests/fixtures/: session.jsonl
