[project]
name = "agentrace"
version = "0.1.0"
description = "Observability for Claude Code subagents. Parses session transcripts, surfaces what agents actually did, and flags the failure patterns."
requires-python = ">=3.11"
dependencies = ["rich>=13.0"]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.7"]

[project.scripts]
agentrace = "agentrace.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
